overrides/grafana/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`gateway.localhost`) && PathPrefix(`/grafana`)
    services:
    - name: grafana
      port: 3000
